# deforestation-causal-inference

./: .gitignore  README.md  pyproject.toml
scripts/: advanced_inference.py  download_hansen_data.py  download_osm_data.py  downsample_mosaic.py  eda_analysis.py  generate_figures.py  generate_map_grid_wdpa.py  improved_propensity_matching.py  inspect_hansen_data.py  load_population.py  load_roads.py  load_wdpa.py  mosaic_hansen.py  partial_results.py  preprocess_data.py  propensity_matching.py  visualize_grids.py
src/deforestation/: __init__.py  cli.py  matching.py
tests/: test_matching.py
