[project]
name = "deforestation-causal-inference"
version = "0.1.0"
description = "Causal impact of protected areas on deforestation with matching + robust inference."
requires-python = ">=3.10"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = ["E","F","I","UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
